made css changes to show image correctly aligned

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -50,7 +50,7 @@ form, fieldset{
 	top:21px;
 	left:215px;
 	width:206px;
-	height:48px;
+	height: 60px;
 	overflow:hidden;
 }
 .visual .heading-public-library a{
